# CommandRunner

./: CMakeLists.txt  README.md  firstfile  firstfile.c
CallingFunctionsOfCmd/: easy  easy.c  firstfile  firstfile.c
FilesC/: iamdog.c
HeaderFileForMultiCmdFunc/: file.h
HeaderFiles/: iamdog.h
HeaderFuncDefinition/: cmdFunc.c
HeaderMultiFuncDefinition/: file.c
SearchBashScript/: search
